# quadruped_control_library

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindqpOASES.cmake
doc/: doxygen.config
include/: path.hpp.in
include/quadruped_control_library/: bodyDynamics.hpp  convexMPC.hpp  fixedFootPlanner.hpp  fixedFootTrajectory.hpp  fixedGait.hpp  legController.hpp
resources/mini_cheetah/: mini_cheetah.urdf
src/: bodyDynamics.cpp  convexMPC.cpp  fixedFootPlanner.cpp  fixedFootTrajectory.cpp  fixedGait.cpp  legController.cpp
test/: helper.hpp  save_load_eigen_csv.hpp  test_convexMPC.cpp  test_fixedFootTrajectory.cpp  test_fixedGait.cpp  test_legController.cpp
test/data/: A.csv  Adt.csv  Aqp.csv  Bdt.csv  Bqp.csv  H.csv  HRed.csv  IBody.csv  g.csv  gRed.csv  mpcForces.csv  rFeet.csv  rYaw.csv  stateWeights.csv  uB.csv  x0.csv  xD.csv
